samples/_failures_safe/1761209982_81bec6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3596bf44.c: In function ‘main’:
./samples/SAFE/__tmp_3596bf44.c:156:9: error: expected expression at end of input
  156 |         if (choice ==
      |         ^~
./samples/SAFE/__tmp_3596bf44.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3596bf44.c:156:9: error: expected declaration or statement at end of input
